# HADES

./: .gitignore  Development_info.md  Hades_plan.docx  README.md
cyber-recon-app/: README.md  docker-compose.yml
cyber-recon-app/backend/: graph.py  kali_connection_test.py  main.py  nodes.py  pyproject.toml  tools.py
cyber-recon-app/cli/: go.mod  go.sum  main.go
cyber-recon-app/config/: config.json  config.yaml
cyber-recon-app/docker/: backend.dockerfile  entrypoint.sh  kali-metasploit.dockerfile  nmap.dockerfile  supervisord.conf
