[tool.poetry]
package-mode = false

[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "kalinchenko23",email = "kalinchenko.max@gmail.com"}
]
requires-python = ">=3.10,<3.14" 
dependencies = [
    "pika (>=1.3.2,<2.0.0)",
    "langgraph (>=0.6.6,<0.7.0)",
    "autogen (>=0.9.9,<0.10.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-ollama (>=0.3.6,<0.4.0)",
    "langchain-groq (>=0.3.7,<0.4.0)",
    "docker (>=7.1.0,<8.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "langchain-openai (>=0.3.30,<0.4.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
